web: fix unseemly padding on mobile header text

--- a/web/styles/Home.module.css
+++ b/web/styles/Home.module.css
@@ -268,7 +268,7 @@
   .header p {
     align-items: center;
     inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
+    padding: 1rem;
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
